--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node app.js",
+    "start": "babel-node index.js",
+    "serve": "babel-node app.js",
     "test": "jest --coverage"
   },
   "repository": {
